[workspace]
members = ['contracts/*']
resolver = "2"

[workspace.package]
name = 'pay-contracts'
authors = ["hoanm"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aura-nw/pay-contracts"
rust-version = "1.69.0"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.13.0
"""

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
thiserror = { version = "1.0.38" }
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
cw-multi-test = "0.17.0"
cw20 = "1.1.1"
cw20-base = { version = "1.1.1", features = ["library"] }
price-feed = { version = "0.1.0", path = "./contracts/price-feed" }

[profile.release.package.minter]
codegen-units = 1
incremental = false

[profile.release.package.price-feed]
codegen-units = 1
incremental = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
